// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The Radio component should render correctly 1`] = `
Array [
  <View
    onLayout={[Function]}
    pointerEvents="box-none"
    style={
      Array [
        Object {
          "bottom": 0,
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        Object {},
      ]
    }
  />,
  <View>
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "borderBottomColor": "rgba(165, 165, 165, 0.5)",
          "borderBottomWidth": 1,
          "flexDirection": "row",
          "justifyContent": "space-between",
          "padding": 8,
        }
      }
      underline={true}
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "borderColor": "#A5A5A5",
            "borderRadius": 10,
            "borderWidth": 2,
            "height": 20,
            "justifyContent": "center",
            "width": 20,
          }
        }
      />
      <Text
        style={
          Object {
            "color": "#505050",
            "fontFamily": "InterUI-Bold",
            "fontSize": 12,
            "lineHeight": 18,
          }
        }
      >
        option 1
      </Text>
    </View>
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "borderBottomColor": "rgba(165, 165, 165, 0.5)",
          "borderBottomWidth": 1,
          "flexDirection": "row",
          "justifyContent": "space-between",
          "padding": 8,
        }
      }
      underline={true}
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "borderColor": "#A5A5A5",
            "borderRadius": 10,
            "borderWidth": 2,
            "height": 20,
            "justifyContent": "center",
            "width": 20,
          }
        }
      />
      <Text
        style={
          Object {
            "color": "#505050",
            "fontFamily": "InterUI-Bold",
            "fontSize": 12,
            "lineHeight": 18,
          }
        }
      >
        option 2
      </Text>
    </View>
  </View>,
]
`;

exports[`The Radio component should render horizontally 1`] = `
Array [
  <View
    onLayout={[Function]}
    pointerEvents="box-none"
    style={
      Array [
        Object {
          "bottom": 0,
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        Object {},
      ]
    }
  />,
  <View
    style={
      Object {
        "flexDirection": "row",
      }
    }
  >
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "borderBottomColor": "rgba(165, 165, 165, 0.5)",
          "borderBottomWidth": 0,
          "flexDirection": "row",
          "justifyContent": "space-between",
          "padding": 8,
        }
      }
      underline={false}
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "borderColor": "#A5A5A5",
            "borderRadius": 10,
            "borderWidth": 2,
            "height": 20,
            "justifyContent": "center",
            "width": 20,
          }
        }
      />
      <Text
        style={
          Object {
            "color": "#505050",
            "fontFamily": "InterUI-Bold",
            "fontSize": 12,
            "lineHeight": 18,
          }
        }
      >
        option 1
      </Text>
    </View>
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "borderBottomColor": "rgba(165, 165, 165, 0.5)",
          "borderBottomWidth": 0,
          "flexDirection": "row",
          "justifyContent": "space-between",
          "padding": 8,
        }
      }
      underline={false}
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "borderColor": "#A5A5A5",
            "borderRadius": 10,
            "borderWidth": 2,
            "height": 20,
            "justifyContent": "center",
            "width": 20,
          }
        }
      />
      <Text
        style={
          Object {
            "color": "#505050",
            "fontFamily": "InterUI-Bold",
            "fontSize": 12,
            "lineHeight": 18,
          }
        }
      >
        option 2
      </Text>
    </View>
  </View>,
]
`;

exports[`The Radio component should render with an error 1`] = `
Array [
  <View
    onLayout={[Function]}
    pointerEvents="box-none"
    style={
      Array [
        Object {
          "bottom": 0,
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        Object {},
      ]
    }
  />,
  <View>
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "borderBottomColor": "rgba(165, 165, 165, 0.5)",
          "borderBottomWidth": 1,
          "flexDirection": "row",
          "justifyContent": "space-between",
          "padding": 8,
        }
      }
      underline={true}
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "borderColor": "#A5A5A5",
            "borderRadius": 10,
            "borderWidth": 2,
            "height": 20,
            "justifyContent": "center",
            "width": 20,
          }
        }
      />
      <Text
        style={
          Object {
            "color": "#505050",
            "fontFamily": "InterUI-Bold",
            "fontSize": 12,
            "lineHeight": 18,
          }
        }
      >
        option 1
      </Text>
    </View>
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "borderBottomColor": "rgba(165, 165, 165, 0.5)",
          "borderBottomWidth": 1,
          "flexDirection": "row",
          "justifyContent": "space-between",
          "padding": 8,
        }
      }
      underline={true}
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "borderColor": "#A5A5A5",
            "borderRadius": 10,
            "borderWidth": 2,
            "height": 20,
            "justifyContent": "center",
            "width": 20,
          }
        }
      />
      <Text
        style={
          Object {
            "color": "#505050",
            "fontFamily": "InterUI-Bold",
            "fontSize": 12,
            "lineHeight": 18,
          }
        }
      >
        option 2
      </Text>
    </View>
    <View
      style={
        Object {
          "alignSelf": "stretch",
          "width": "100%",
        }
      }
    >
      <Text
        style={
          Object {
            "color": "#c64f55",
            "fontFamily": "InterUI-Bold",
            "fontSize": 12,
            "lineHeight": 18,
            "paddingTop": 8,
          }
        }
      >
        Danger Will Robinson
      </Text>
    </View>
  </View>,
]
`;

exports[`The Radio component should render without an underline 1`] = `
Array [
  <View
    onLayout={[Function]}
    pointerEvents="box-none"
    style={
      Array [
        Object {
          "bottom": 0,
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        Object {},
      ]
    }
  />,
  <View>
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "borderBottomColor": "rgba(165, 165, 165, 0.5)",
          "borderBottomWidth": 0,
          "flexDirection": "row",
          "justifyContent": "space-between",
          "padding": 8,
        }
      }
      underline={false}
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "borderColor": "#A5A5A5",
            "borderRadius": 10,
            "borderWidth": 2,
            "height": 20,
            "justifyContent": "center",
            "width": 20,
          }
        }
      />
      <Text
        style={
          Object {
            "color": "#505050",
            "fontFamily": "InterUI-Bold",
            "fontSize": 12,
            "lineHeight": 18,
          }
        }
      >
        option 1
      </Text>
    </View>
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "borderBottomColor": "rgba(165, 165, 165, 0.5)",
          "borderBottomWidth": 0,
          "flexDirection": "row",
          "justifyContent": "space-between",
          "padding": 8,
        }
      }
      underline={false}
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "borderColor": "#A5A5A5",
            "borderRadius": 10,
            "borderWidth": 2,
            "height": 20,
            "justifyContent": "center",
            "width": 20,
          }
        }
      />
      <Text
        style={
          Object {
            "color": "#505050",
            "fontFamily": "InterUI-Bold",
            "fontSize": 12,
            "lineHeight": 18,
          }
        }
      >
        option 2
      </Text>
    </View>
  </View>,
]
`;
